# release-semantic-commit

./: 404.html  CHANGELOG.md  README.md  changelog.html  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  docs.yml
changelog/: index.html
docs/: changelog.md  index.md
includes/updated_date/: index.html
scripts/: update_changelog.py  update_index.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/changelog/: index.html
site/search/: search_index.json
