[project]
name = "release-semantic-commit"
version = "0.1.0"
description = "Projeto Python com versionamento semântico"
authors = [
  { name="Rauni Fabricio", email="raunifabricio10@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "v$version"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
